--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@drawable/gradient_background"
     tools:context=".MainActivity" >
+
+    <TextView
+        android:id="@+id/textViewGameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tic Tac Toe"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,21 +31,27 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
     </LinearLayout>
 
@@ -47,21 +66,27 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -75,21 +100,37 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/button8"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
 
         <Button
             android:id="@+id/button9"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="" />
+            android:text=""
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonSalir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:onClick="exit"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp" />
 
 </LinearLayout>
